--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
+	<scm>
+	    <connection>scm:git:https://github.com/ryandel13/registry-server</connection>
+	    <developerConnection>scm:git:https://github.com/ryandel13/registry-server</developerConnection>
+	    <url>https://github.com/ryandel13/registry-server</url>
+  	</scm>
+	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -69,5 +75,18 @@
 		</repository>
 	</repositories>
 
-
+	<distributionManagement>
+	    <repository>
+		    <uniqueVersion>false</uniqueVersion>
+		<id>nexus2</id>
+		<url>http://jupiter:8081/nexus/content/repositories/releases/</url>
+	    </repository>
+		
+		<snapshotRepository>
+			<uniqueVersion>false</uniqueVersion>
+			<id>snapshot</id>
+			<url>http://jupiter:8081/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
+	
 </project>
