[maven-release-plugin] prepare release registry-server-0.0.2

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.example</groupId>
 	<artifactId>registry-server</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<packaging>jar</packaging>
 
 	<name>registry-server</name>
@@ -21,7 +21,7 @@
 	    <connection>scm:git:https://github.com/ryandel13/registry-server</connection>
 	    <developerConnection>scm:git:https://github.com/ryandel13/registry-server</developerConnection>
 	    <url>https://github.com/ryandel13/registry-server</url>
-  	  <tag>HEAD</tag>
+  	  <tag>registry-server-0.0.2</tag>
   </scm>
 	
 	<properties>
